Separated the Container from the inner contents in Navbar

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -10,7 +10,7 @@
   background-color: #141517;
   color: white;
 }
-.nav .container {
+.navbarInner {
   display: flex;
   justify-content: space-between;
   align-items: center;
