--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Josefin Sans', sans-serif;
   background-color: #141517;
 }
 
@@ -21,6 +20,11 @@ a {
   background-size: 100% auto;
   height: inherit;
   background-repeat: no-repeat;
+}
+
+.nav-links span {
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1.25rem;
 }
 
 @media (max-width: 769px) {
