Made minor corrections

--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -4,6 +4,6 @@
 }
 .footerOuter {
   height: 1.5rem;
-  background-color: #ff5454;
+  background-color: #fd5457;
   border-bottom: 1.2px solid black;
 }
