--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -7,3 +7,17 @@
   background-color: #fd5457;
   border-bottom: 1.2px solid black;
 }
+.company {
+  margin-bottom: 1.5rem;
+}
+
+.company a {
+  display: inline-block;
+  color: #cfd0d0;
+  padding: 0;
+  margin-right: 1rem;
+}
+.company a:hover {
+  color: '#cfd0d0';
+  opacity: 0.8;
+}
