--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -14,11 +14,13 @@
 
 .company a {
   display: inline-block;
-  color: #cfd0d0;
+  color: #c4c4c4;
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 1rem;
   padding: 0;
-  margin-right: 1rem;
+  margin: 0.6rem;
 }
 .company a:hover {
-  color: '#cfd0d0';
+  color: '#c4c4c4';
   opacity: 0.8;
 }
