--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -80,6 +80,14 @@
   font-weight: 300;
 }
 
+@media /*(width: 1024px) and */(min-height: 1366px) and (max-height: 1367px){
+  #showcase {
+    position: relative;
+    height: 33.5vh;
+    background-color: #141517;
+  }
+}
+
 
 @media (min-width: 768px) and (max-width: 1023px) {
 
@@ -119,3 +127,4 @@
     margin-top: 4rem;
   }
 }
+
