--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -2,10 +2,11 @@
   font-family: 'Josefin Sans', sans-serif;
   font-size: 1.25rem;
   padding: 0;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   color: #fd5457;
   margin-right: 1.2rem;
   opacity: 1;
+  padding: 0 1.25rem;
 }
 
 .navLink a:hover {
@@ -17,9 +18,13 @@
 @media(max-width: 768px) {
   .navLink a {
     display: block;
-    margin-right: 0;
-    margin-left: 1.2rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin: 1rem 1.2rem;
+    padding: 0.5rem 0;
+    border-bottom: 1px solid #c4c4c444;
+  }
+
+  .brand-logo {
+    margin: 1.25rem auto;
+    display: block;
   }
 }
