--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -23,7 +23,7 @@
     border-bottom: 1px solid #c4c4c444;
   }
 
-  .brand-logo {
+  .brandLogo {
     margin: 1.25rem auto;
     display: block;
   }
