--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -17,7 +17,44 @@
 
 .formBody {
   width: 100%;
-  height: 200px;
   border: 1px #fd5457 solid;
   border-radius: 10px;
+}
+
+.form {
+  margin: 2rem auto;
+  width: 80%;
+}
+
+.dividerArea {
+  width: 80%;
+  margin: 2rem auto;
+  display: flex;
+}
+
+.divider {
+  flex: 1;
+  height: 1px;
+  background: #ccc;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.dividerText {
+  color: #ccc;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.federatedArea {
+  display: flex;
+  width: 80%;
+  margin: 2rem auto;
+  justify-content: space-between;
+}
+
+@media (max-width: 768px) {
+  .federatedArea {
+    display: block;
+  }
 }
