--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -54,6 +54,13 @@
   justify-content: space-between;
 }
 
+.bottomText {
+  text-align: center;
+  margin-bottom: 1.5rem;
+  color: #fdfdfd;
+  font-size: 1rem;
+}
+
 input[type=text]:not(.browser-default):focus:not([readonly]),
 input[type=email]:not(.browser-default):focus:not([readonly]),
 input[type=password]:not(.browser-default):focus:not([readonly]),
