--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -55,6 +55,9 @@
 }
 
 .bottomText {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   margin-bottom: 1.5rem;
   color: #fdfdfd;
