--- a/styles/CustomIcons.css
+++ b/styles/CustomIcons.css
@@ -23,3 +23,61 @@ button:hover #arrowLeftBottom {
 svg #goForward {
     fill: #fdfdfd;
 }
+
+/* Loader */
+.loader {
+    height: 70px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .loader .stroke {
+    display: block;
+    position: relative;
+    background: #FD5457;
+    height: 100%;
+    width: 8px;
+    border-radius: 50px;
+    margin: 0 5px;
+    animation: animate 1.1s linear infinite;
+  }
+  
+  @keyframes animate {
+    50% {
+        height: 20%;
+        opacity: 0.4;
+    }
+  
+    100% {
+        height: 100%;
+        opacity: 1;
+    }
+  }
+  
+  .stroke:nth-child(1) {
+    animation-delay: 0s;
+  }
+  
+  .stroke:nth-child(2) {
+    animation-delay: 0.3s;
+  }
+  
+  .stroke:nth-child(3) {
+    animation-delay: 0.6s;
+  }
+  
+  .stroke:nth-child(4) {
+    animation-delay: 0.9s;
+  }
+  
+  .stroke:nth-child(5) {
+    animation-delay: 0.6s;
+  }
+  
+  .stroke:nth-child(6) {
+    animation-delay: 0.3s;
+  }
+  
+  .stroke:nth-child(7) {
+    animation-delay: 0s;
+  }
