--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -5,64 +5,203 @@
 .referImage {
   height: 100%;
   width: 9rem;
+  margin-right: 2rem;
 }
 
-.text {
-  padding-left: 2rem;
+.invitePara{
   font-size: 1rem;
-  margin-top: 1rem;
+  margin:0;
 }
 
-.text p {
-  font-size: 0.8rem;
+.inviteSection{
+  margin-top: auto;
+  margin-bottom: auto;
+  padding-right: 1.2rem;
 }
 
-.inviteText {
-  padding-bottom: 1rem;
-  font-size: 1.25rem;
+.inviteHeading{
+  margin-top: 0;
+  margin-bottom: 3rem;
+  font-size: 1.5rem;
 }
 
-.refer {
+.highlightedText {
   color: #fd5457;
 }
 
-.textIcon {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 0.2rem;
+
+/* MEDIA QUERIES  */
+
+@media (max-width: 1280px) {
+
+  .inviteHeading{
+    margin-bottom: 2rem;
+    font-size: 1.25rem;
+  }
+
+  .invitePara{
+  font-size: 0.85rem;
+  }
+
 }
 
-.title {
-  margin-bottom: 2rem;
-}
-
-.slider {
-  margin-bottom: 3rem;
-}
 
 @media (max-width: 768px) {
+
+  .inviteHeading{
+    margin-bottom: 1rem;
+    font-size: 1rem;
+  }
+
+  .invitePara{
+  font-size: 0.75rem;
+  }
 
   .referImage {
     width: 7rem;
   }
 
-  .text {
-    padding-left: 0.8rem;
+}
+
+@media (max-width: 600px) {
+
+  .inviteHeading{
+    margin-bottom: .5rem;
+  }
+
+  .inviteSection{
+    padding-right: .5rem;
+  }
+
+}
+
+@media (max-width: 350px) {
+
+  .inviteHeading{
+    margin-bottom: .3rem;
     font-size: 0.8rem;
   }
 
-  .inviteText {
-    padding-bottom: 1rem;
-    font-size: 1rem;
+  .invitePara{
+    font-size: 0.6rem;
+    }
+
+  .inviteSection{
+    padding-right: .3rem;
   }
 
-  .title {
-    margin-bottom: 1rem;
+   .referImage {
+    width: 5rem;
   }
 
-  .slider {
-    margin: 1rem;
-  }
-  
 }
+
+/* <---------------------------------------------------------BOOK CARD--------------------------------------------------------> */
+
+.bookImage {
+  height: 100%;
+  width: 9rem;
+  margin-right: 2rem;
+}
+
+.bookDetails{
+  margin-right: 1rem;
+}
+
+.bookTitle{
+  margin-top: 1rem;
+  font-size: 1.5rem;
+}
+
+.slider{
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+
+.bookHistory{
+  position: absolute;
+  font-size: .9rem;
+  margin-top: 0;
+  margin-bottom: 14px;
+  bottom: 0;
+}
+
+.deleteIcon{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin-right: 1rem;
+  margin-bottom: 12px;
+}
+ 
+/* MEDIA QUERIES */
+
+@media (max-width: 768px) {
+
+  .bookTitle{
+    font-size: 1.25rem;
+  }
+
+  .bookHistory{
+    font-size: .75rem;
+  }
+
+  .bookImage{
+     width: 7rem;  
+  }
+
+}
+
+
+@media (max-width: 450px) {
+
+  .bookTitle{
+    margin-top: 0.5rem;
+    font-size: .8rem;
+  }
+
+  .bookDetails{
+    margin-right: .7rem;
+  }
+
+  .bookHistory{
+    font-size: .6rem;
+    margin-bottom: 5px;
+  }
+
+  .bookImage{
+    width: 5rem;
+    margin-right: .8rem;
+  }
+
+  .deleteIcon{
+    margin-right: 0.8rem;
+    margin-bottom: 3px;
+  }
+}
+
+@media only screen and (max-width: 449px) and (min-width: 399px) {
+ 
+  .deleteIcon{
+    margin-right: 2rem;
+  }
+}
+
+@media (max-width: 300px){
+  .bookTitle{
+    margin-top: 0.4rem;
+   font-size: .7rem;
+  }
+
+  .bookHistory{
+    font-size: .5rem;
+    margin-bottom: 5px;
+  }
+
+  .bookImage{
+    width: 4rem;
+    margin-right: 0.7rem;
+  }
+
+} 
