--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -1,25 +1,21 @@
-.card {
-  background-color: #1d1d1d;
-}
-
 .referImage {
   height: 100%;
   width: 9rem;
   margin-right: 2rem;
 }
 
-.invitePara{
+.invitePara {
   font-size: 1rem;
   margin:0;
 }
 
-.inviteSection{
+.inviteSection {
   margin-top: auto;
   margin-bottom: auto;
   padding-right: 1.2rem;
 }
 
-.inviteHeading{
+.inviteHeading {
   margin-top: 0;
   margin-bottom: 3rem;
   font-size: 1.5rem;
@@ -34,12 +30,12 @@
 
 @media (max-width: 1280px) {
 
-  .inviteHeading{
+  .inviteHeading {
     margin-bottom: 2rem;
     font-size: 1.25rem;
   }
 
-  .invitePara{
+  .invitePara {
   font-size: 0.85rem;
   }
 
@@ -48,12 +44,12 @@
 
 @media (max-width: 768px) {
 
-  .inviteHeading{
+  .inviteHeading {
     margin-bottom: 1rem;
     font-size: 1rem;
   }
 
-  .invitePara{
+  .invitePara {
   font-size: 0.75rem;
   }
 
@@ -65,11 +61,11 @@
 
 @media (max-width: 600px) {
 
-  .inviteHeading{
+  .inviteHeading {
     margin-bottom: .5rem;
   }
 
-  .inviteSection{
+  .inviteSection {
     padding-right: .5rem;
   }
 
@@ -77,16 +73,16 @@
 
 @media (max-width: 350px) {
 
-  .inviteHeading{
+  .inviteHeading {
     margin-bottom: .3rem;
     font-size: 0.8rem;
   }
 
-  .invitePara{
+  .invitePara {
     font-size: 0.6rem;
     }
 
-  .inviteSection{
+  .inviteSection {
     padding-right: .3rem;
   }
 
@@ -99,109 +95,70 @@
 /* <---------------------------------------------------------BOOK CARD--------------------------------------------------------> */
 
 .bookImage {
-  height: 100%;
-  width: 9rem;
-  margin-right: 2rem;
+  width: 25%;
+} 
+
+.bookDetails {
+  margin: 1rem;
+  margin-left: 2rem;
+  margin-bottom: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-.bookDetails{
-  margin-right: 1rem;
-}
-
-.bookTitle{
-  margin-top: 1rem;
+.bookTitle {
   font-size: 1.5rem;
+  margin: 0;
 }
 
-.slider{
-  margin-top: auto;
-  margin-bottom: auto;
+.slider {
+  width: 80%;
 }
 
-
-.bookHistory{
-  position: absolute;
-  font-size: .9rem;
-  margin-top: 0;
-  margin-bottom: 14px;
-  bottom: 0;
+.bottomText {
+  display: flex;
+  justify-content: space-between;
 }
 
-.deleteIcon{
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  margin-right: 1rem;
-  margin-bottom: 12px;
+.delete {
+  display: flex;
+  align-items: center;
 }
- 
-/* MEDIA QUERIES */
 
 @media (max-width: 768px) {
-
-  .bookTitle{
-    font-size: 1.25rem;
+  .bookImage {
+    width: 33%;
   }
 
-  .bookHistory{
-    font-size: .75rem;
+  .bookTitle {
+    font-size: 1rem;
   }
 
-  .bookImage{
-     width: 7rem;  
+  .slider {
+    width: 90%;
   }
 
-}
-
-
-@media (max-width: 450px) {
-
-  .bookTitle{
-    margin-top: 0.5rem;
-    font-size: .8rem;
-  }
-
-  .bookDetails{
-    margin-right: .7rem;
-  }
-
-  .bookHistory{
-    font-size: .6rem;
-    margin-bottom: 5px;
-  }
-
-  .bookImage{
-    width: 5rem;
-    margin-right: .8rem;
-  }
-
-  .deleteIcon{
-    margin-right: 0.8rem;
-    margin-bottom: 3px;
+  .bottomText {
+    font-size: 0.6rem;
   }
 }
 
-@media only screen and (max-width: 449px) and (min-width: 399px) {
- 
-  .deleteIcon{
-    margin-right: 2rem;
+@media (max-width: 600px) {
+  .bottomText {
+    font-size: 0.8rem;
   }
 }
 
-@media (max-width: 300px){
-  .bookTitle{
-    margin-top: 0.4rem;
-   font-size: .7rem;
+@media (max-width: 440px) {
+  .bottomText {
+    font-size: 0.6rem;
   }
+}
 
-  .bookHistory{
-    font-size: .5rem;
-    margin-bottom: 5px;
+@media (max-width: 400px) {
+  .bookTitle {
+    font-size: 0.8rem;
   }
-
-  .bookImage{
-    width: 4rem;
-    margin-right: 0.7rem;
-  }
-
-} 
+}
