--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -73,3 +73,16 @@
   font-family: 'Josefin Sans', sans-serif;
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .innerArea {
+    width: 100%;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 578px) {
+  .emptyInnerArea {
+    width: 60%;
+  }
+}
