visual refresh with custom icons

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -19,6 +19,9 @@
 
 .cardTitle {
   margin-top: 0;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: 0.5px;
 }
 
 .info {
@@ -27,7 +30,7 @@
 }
 
 .remainingInfo {
-  width: 75%;
+  width: 60%;
   border: 1px #ccc solid;
   border-radius: 50px;
   text-align: center;
@@ -36,6 +39,7 @@
 .hoursText {
   margin: 0;
   padding: 2px;
+  font-size: 0.75rem;
 }
 
 .favouriteCheckBox {
