--- a/styles/Auth.module.css
+++ b/styles/Auth.module.css
@@ -27,6 +27,18 @@
   width: 80%;
 }
 
+.forgotText {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  color: #fdfdfd;
+  font-size: 0.9rem;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .dividerArea {
   width: 80%;
   margin: 2rem auto;
