--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -22,6 +22,11 @@
   font-size: 1.125rem;
   font-weight: 700;
   letter-spacing: 0.5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 .info {
