--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -59,13 +59,18 @@
   margin-left: 240px;
 }
 
-.playerArea {
-  position: absolute;
+.playerLargeArea {
+  position: fixed;
   top: 0;
-  left: 0;
   width: 100%;
-  height: 100vh;
-  z-index: 1;
+  height: 100%;
+}
+
+.playerSmallArea {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 15%;
 }
 
 @media (max-width: 768px) {
@@ -77,6 +82,10 @@
   .innerArea {
     width: 100%;
     margin-left: 0;
+  }
+
+  .playerSmallArea {
+    bottom: 9.9%;
   }
 }
 
