--- a/styles/Dashboard.module.css
+++ b/styles/Dashboard.module.css
@@ -64,6 +64,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  background: #141517;
 }
 
 .playerSmallArea {
@@ -71,6 +72,8 @@
   bottom: 0;
   width: 100%;
   height: 15%;
+  background: rgba(29, 29, 29, 0.85);
+  backdrop-filter: blur(10px) saturate(100%) contrast(45%) brightness(130%);
 }
 
 @media (max-width: 768px) {
