--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -2,3 +2,54 @@
   height: 100%;
   padding: 2rem;
 }
+
+.innerArea {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+}
+
+.nameArea {
+  flex: 1;
+}
+
+.title {
+  text-align: center;
+  color: #fefefe;
+  font-family: 'Josefin Sans', sans-serif;
+  margin-top: 0;
+}
+
+.imageArea {
+  flex: 16;
+}
+
+.playerImage {
+  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+
+.controlArea {
+  flex: 3;
+}
+
+@media (max-width: 1024px) {
+  .playerImage {
+    width: 75%;
+  }
+}
+
+@media (max-width: 768px) {
+  .controlArea {
+    padding-bottom: 10vh;
+  }
+}
+
+@media (max-width: 600px) {
+  .playerImage {
+    width: 100%;
+  }
+}
