--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -34,6 +34,9 @@
 
 .controlArea {
   flex: 3;
+  padding-top: 1rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
 }
 
 @media (max-width: 1024px) {
