--- a/styles/Player.module.css
+++ b/styles/Player.module.css
@@ -90,6 +90,27 @@
   font-weight: 700;
 }
 
+.smallPlayerArea {
+  display: flex;
+  height: 100%;
+}
+
+.smallImageArea {
+  flex: 1;
+}
+
+.smallPlayerImage {
+  height: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+}
+
+.smallControlArea {
+  flex: 9;
+}
+
 @media (max-width: 1200px) {
   .playerImage {
     width: 60%;
