--- a/components/dashboard/sections/settings/Settings.module.scss
+++ b/components/dashboard/sections/settings/Settings.module.scss
@@ -2,7 +2,7 @@
   &__main {
     display: flex;
     max-width: 1080px;
-    width: 80%;
+    width: 90%;
     margin: 5rem auto;
     background: #1d1d1d;
     border-radius: 15px;
@@ -29,7 +29,7 @@
     padding: 1rem;
   }
   &__image__container {
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
   }
   &__image {
     border-radius: 50%;
@@ -55,6 +55,15 @@
 }
 
 .account__overview {
+  .heading {
+    font-family: Josefin Sans;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 18px;
+    color: #fefefe;
+    margin-bottom: 3rem;
+  }
   .details {
     margin: 0;
     padding: 0;
@@ -63,7 +72,7 @@
       flex: 1;
 
       &__text {
-        flex: 2;
+        flex: 3;
         display: flex;
         align-items: center;
       }
@@ -87,6 +96,24 @@
       border: 1px solid #cccccc;
       border-radius: 50px;
       padding: 0.8rem;
+    }
+  }
+
+  .form {
+    &__group {
+      margin-bottom: 1rem;
+      width: 100%;
+    }
+
+    &__input {
+      outline: none;
+      border: 1px solid #cccccc;
+      border-radius: 50px;
+      padding: 0.8rem 1.5rem;
+      background: #1d1d1d;
+      width: 100%;
+      color: #fff;
+      font-size: 1rem;
     }
   }
 }
